--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         }
         button {
             padding: 10px 20px;
-            background: #4CAF50;
+            background: #0ab810;
             color: white;
             border: none;
             border-radius: 5px;
